Add mockk and first tests for the unicode inspection